// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers PageExternal FormArrayContainerCode Forms FormContainerCodeVerifyPhone shallow renders correctly 1`] = `
<FormCodeVerifyPhone
  currentFormBool={false}
  formHeightBuffer={50}
  handleInputChange={[Function]}
  heightRef={[MockFunction]}
  inputHeightBuffer={15}
  inputs={
    Object {
      "codeVerifyPhoneCode": Object {
        "errorMessage": "",
        "id": "codeVerifyPhoneCode",
        "parentId": "codePhoneVerifyForm",
        "value": "",
      },
    }
  }
  mediaWidth={700}
  width={300}
/>
`;

exports[`Containers PageExternal FormArrayContainerCode Forms FormContainerCodeVerifyPhone shallow renders correctly and calls handleInputChange, with invalid phone confirmation code error 1`] = `
<FormCodeVerifyPhone
  currentFormBool={false}
  formHeightBuffer={50}
  handleInputChange={[Function]}
  heightRef={[MockFunction]}
  inputHeightBuffer={15}
  inputs={
    Object {
      "codeVerifyPhoneCode": Object {
        "errorMessage": "Please verify you have entered the correct confirmation code or request a new code.",
        "id": "codeVerifyPhoneCode",
        "parentId": "codePhoneVerifyForm",
        "value": "",
      },
    }
  }
  mediaWidth={700}
  width={300}
/>
`;

exports[`Containers PageExternal FormArrayContainerCode Forms FormContainerCodeVerifyPhone shallow renders correctly and calls handleInputChange, with invalid phone verification code error 1`] = `
<FormCodeVerifyPhone
  currentFormBool={false}
  formHeightBuffer={50}
  handleInputChange={[Function]}
  heightRef={[MockFunction]}
  inputHeightBuffer={15}
  inputs={
    Object {
      "codeVerifyPhoneCode": Object {
        "errorMessage": "Please verify you have entered the correct verification code or request a new code.",
        "id": "codeVerifyPhoneCode",
        "parentId": "codePhoneVerifyForm",
        "value": "",
      },
    }
  }
  mediaWidth={700}
  width={300}
/>
`;

exports[`Containers PageExternal FormArrayContainerCode Forms FormContainerCodeVerifyPhone shallow renders correctly and calls handleInputChange, with no phone confirmation code error 1`] = `
<FormCodeVerifyPhone
  currentFormBool={false}
  formHeightBuffer={50}
  handleInputChange={[Function]}
  heightRef={[MockFunction]}
  inputHeightBuffer={15}
  inputs={
    Object {
      "codeVerifyPhoneCode": Object {
        "errorMessage": "Please enter the confirmation code sent to your mobile phone.",
        "id": "codeVerifyPhoneCode",
        "parentId": "codePhoneVerifyForm",
        "value": "",
      },
    }
  }
  mediaWidth={700}
  width={300}
/>
`;

exports[`Containers PageExternal FormArrayContainerCode Forms FormContainerCodeVerifyPhone shallow renders correctly and calls handleInputChange, with no phone verification code error 1`] = `
<FormCodeVerifyPhone
  currentFormBool={false}
  formHeightBuffer={50}
  handleInputChange={[Function]}
  heightRef={[MockFunction]}
  inputHeightBuffer={15}
  inputs={
    Object {
      "codeVerifyPhoneCode": Object {
        "errorMessage": "Please enter the verification code sent to your mobile phone.",
        "id": "codeVerifyPhoneCode",
        "parentId": "codePhoneVerifyForm",
        "value": "",
      },
    }
  }
  mediaWidth={700}
  width={300}
/>
`;

exports[`Containers PageExternal FormArrayContainerCode Forms FormContainerCodeVerifyPhone shallow renders correctly and calls handleInputChange, with unexpected error 1`] = `
<FormCodeVerifyPhone
  currentFormBool={false}
  formHeightBuffer={50}
  handleInputChange={[Function]}
  heightRef={[MockFunction]}
  inputHeightBuffer={15}
  inputs={
    Object {
      "codeVerifyPhoneCode": Object {
        "errorMessage": "Please try your request again. If unsuccessful on subsequent attempts, please contact customer service.",
        "id": "codeVerifyPhoneCode",
        "parentId": "codePhoneVerifyForm",
        "value": "",
      },
    }
  }
  mediaWidth={700}
  width={300}
/>
`;

exports[`Containers PageExternal FormArrayContainerCode Forms FormContainerCodeVerifyPhone shallow renders correctly, with componentWillUpdate, componentDidUpdate, and componentWillUnmount 1`] = `
<FormCodeVerifyPhone
  currentFormBool={false}
  formHeightBuffer={50}
  handleInputChange={[Function]}
  heightRef={[MockFunction]}
  inputHeightBuffer={15}
  inputs={
    Object {
      "codeVerifyPhoneCode": Object {
        "errorMessage": "",
        "id": "codeVerifyPhoneCode",
        "parentId": "codePhoneVerifyForm",
        "value": "",
      },
    }
  }
  mediaWidth={700}
  width={300}
/>
`;

exports[`Containers PageExternal FormArrayContainerCode Forms FormContainerCodeVerifyPhone shallow renders correctly, with loading indicator 1`] = `
<FlexColumn
  alignItems={null}
  alignSelf={null}
  borderColorType="border"
  borderRadius={null}
  borderStyle={null}
  borderWidth={null}
  boxSizing={null}
  color={Object {}}
  display={null}
  flex={null}
  flexWrap={null}
  height="100%"
  justifyContent={null}
  margin={null}
  mediaWidth={null}
  minHeight={null}
  minWidth={null}
  overflowX={null}
  overflowY={null}
  padding={null}
  position={null}
  responsiveAlignSecurities={null}
  responsiveJustifyContent={null}
  responsiveMargin={null}
  responsivePadding={null}
  responsivePosition={null}
  responsiveWidth={null}
  separator={false}
  themeColor="primary"
  width="300px"
>
  <BeatLoader
    color="#7367e6"
    loading={true}
    margin="2px"
    size="15px"
  />
</FlexColumn>
`;
